# mil

./: CMakeLists.txt  testCrc.py
.cache/clangd/index/: CssWork.cpp.BD3FDFA3FBDC3453.idx  CssWork.h.0D56DB01CE3DD68B.idx  main.cpp.C4CF1D3D344FC070.idx
include/: CssWork.h  Server.h
src/: CssWork.cpp  Server.cpp  main.cpp
